VXIPNP/WinNT/HP663X2/hp663x2.bas

'*****************************************************************************
'*  $Header:: /VXIPnP/Eagle/hp663x2/hp663x2.bas 1     5/09/00 11:19a Rkinn $ *
'*  Copyright 1998-2000 Agilent Technologies, Inc.                           *
'*---------------------------------------------------------------------------*
'*  Driver for HP663X2 Dynamic Measurement DC Source                         *
'*****************************************************************************

'*****************************************************************************
'*  STANDARD SECTION                                                         *
'*  Constants and function prototypes for HP standard functions.             *
'*****************************************************************************

'        ***************************************************
'        *  Standard constant error conditions returned    *
'        *  by driver functions.                           *
'        *    HP Common Error numbers start at BFFC0D00    *
'        *    The parameter errors extend the number of    *
'        *      errors over the eight defined in VPP 3.4   *
'        ***************************************************

Global Const HP663X2_INSTR_ERROR_NULL_PTR = &HBFFC0D02
Global Const HP663X2_INSTR_ERROR_RESET_FAILED = &HBFFC0D03
Global Const HP663X2_INSTR_ERROR_UNEXPECTED = &HBFFC0D04
Global Const HP663X2_INSTR_ERROR_INV_SESSION = &HBFFC0D05
Global Const HP663X2_INSTR_ERROR_LOOKUP = &HBFFC0D06
Global Const HP663X2_INSTR_ERROR_DETECTED = &HBFFC0D07

Global Const HP663X2_INSTR_ERROR_PARAMETER9 = &HBFFC0D20
Global Const HP663X2_INSTR_ERROR_PARAMETER10 = &HBFFC0D21
Global Const HP663X2_INSTR_ERROR_PARAMETER11 = &HBFFC0D22
Global Const HP663X2_INSTR_ERROR_PARAMETER12 = &HBFFC0D23
Global Const HP663X2_INSTR_ERROR_PARAMETER13 = &HBFFC0D24
Global Const HP663X2_INSTR_ERROR_PARAMETER14 = &HBFFC0D25
Global Const HP663X2_INSTR_ERROR_PARAMETER15 = &HBFFC0D26
Global Const HP663X2_INSTR_ERROR_PARAMETER16 = &HBFFC0D27
Global Const HP663X2_INSTR_ERROR_PARAMETER17 = &HBFFC0D28
Global Const HP663X2_INSTR_ERROR_PARAMETER18 = &HBFFC0D29

'        ***************************************************
'        *  Constants used by system status functions      *
'        *    These defines are bit numbers which define   *
'        *    the operation and questionable registers.    *
'        *    They are instrument specific.                *
'        ***************************************************

Global Const HP663X2_STB_QUES = &H8
Global Const HP663X2_STB_MAV = &H10
Global Const HP663X2_STB_ESB = &H20
Global Const HP663X2_STB_MSS = &H40
Global Const HP663X2_STB_RQS = &H40
Global Const HP663X2_STB_OPER = &H80

Global Const HP663X2_SRE_QUES = &H8
Global Const HP663X2_SRE_MAV = &H10
Global Const HP663X2_SRE_ESB = &H20
Global Const HP663X2_SRE_OPER = &H80

Global Const HP663X2_OPER_CAL = &H1
Global Const HP663X2_OPER_WTG = &H20
Global Const HP663X2_OPER_CV = &H100
Global Const HP663X2_OPER_CC_POS = &H400
Global Const HP663X2_OPER_CC_NEG = &H800

Global Const HP663X2_QUES_OV = &H1
Global Const HP663X2_QUES_OCP = &H2
Global Const HP663X2_QUES_FUSE = &H4
Global Const HP663X2_QUES_OT = &H10
Global Const HP663X2_QUES_RI = &H200
Global Const HP663X2_QUES_UNREG = &H400
Global Const HP663X2_QUES_OVLD = &H4000

Global Const HP663X2_ESR_OPC = &H1
Global Const HP663X2_ESR_QYE = &H4
Global Const HP663X2_ESR_DDE = &H8
Global Const HP663X2_ESR_EXE = &H10
Global Const HP663X2_ESR_CME = &H20
Global Const HP663X2_ESR_PON = &H80

Global Const HP663X2_REG_ESE = 0
Global Const HP663X2_REG_SRE = 1
Global Const HP663X2_REG_OPER = 2
Global Const HP663X2_REG_QUES = 3

Global Const HP663X2_CMDSTRING_MAX = 256

Global Const HP663X2_CMDSTRING_Q_MIN = 2
Global Const HP663X2_CMDSTRING_Q_MAX = 32767&

'        ***************************************************
'        *  Constants used by function hp663x2_timeOut      *
'        ***************************************************

Global Const HP663X2_TIMEOUT_MAX = 2147483647
Global Const HP663X2_TIMEOUT_MIN = 1&

'        ***************************************************
'        *  Required plug and play functions from VPP-3.1  *
'        ***************************************************

Declare Function hp663x2_init Lib "hp663x2_32.dll" _
        (ByVal resourceName As String, _
         ByVal IDQuery As Integer, _
         ByVal resetDevice As Integer, _
               instrumentHandle As Long) As Long

Declare Function hp663x2_close Lib "hp663x2_32.dll" _
        (ByVal instrumentHandle As Long) As Long

Declare Function hp663x2_reset Lib "hp663x2_32.dll" _
        (ByVal instrumentHandle As Long) As Long

Declare Function hp663x2_self_test Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           selfTestResult As Integer, _
     ByVal selfTestMessage As String) As Long

Declare Function hp663x2_error_query Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           errorCode As Long, _
     ByVal errorMessage As String) As Long

Declare Function hp663x2_error_message Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal statusCode As Long, _
     ByVal message As String) As Long

Declare Function hp663x2_revision_query Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal instrumentDriverRevision As String, _
     ByVal firmwareRevision As String) As Long


'        ***************************************************
'        *  HP standard utility functions                  *
'        ***************************************************

Declare Function hp663x2_timeOut Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal setTimeOut As Long) As Long

Declare Function hp663x2_timeOut_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           timeOut As Long) As Long

Declare Function hp663x2_errorQueryDetect Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal setErrorQueryDetect As Integer) As Long

Declare Function hp663x2_errorQueryDetect_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           errorQueryDetect As Integer) As Long

Declare Function hp663x2_dcl Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long) As Long

Declare Function hp663x2_opc_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           instrumentReady As Integer) As Long


'        ***************************************************
'        *  HP standard status functions                   *
'        ***************************************************

Declare Function hp663x2_readStatusByte_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           statusByte As Integer) As Long

Declare Function hp663x2_operEvent_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           operationEventRegister As Long) As Long

Declare Function hp663x2_operCond_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           operationConditionRegister As Long) As Long

Declare Function hp663x2_quesEvent_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           questionableEventRegister As Long) As Long

Declare Function hp663x2_quesCond_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           questionableConditionRegister As Long) As Long


'        ***************************************************
'        *  HP standard command passthrough functions      *
'        ***************************************************

Declare Function hp663x2_cmd Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal sendStringCommand As String) As Long

Declare Function hp663x2_cmdString_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryStringCommand As String, _
     ByVal stringSize As Long, _
     ByVal stringResult As String) As Long

Declare Function hp663x2_cmdInt Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal sendIntegerCommand As String, _
     ByVal sendInteger As Long) As Long

Declare Function hp663x2_cmdInt16_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryI16Command As String, _
           i16Result As Integer) As Long



'* End of HP standard declarations */
'*---------------------------------------------------------------------------*


'*****************************************************************************
'*  INSTRUMENT SPECIFIC SECTION                                              *
'*  Constants and function prototypes for instrument specific functions.     *
'*****************************************************************************

'        ***************************************************
'        *  Instrument specific error numbers              *
'        ***************************************************
Global Const HP663X2_INSTR_ERROR_NVRAM_RD0_CS = 1
Global Const HP663X2_INSTR_ERROR_NVRAM_CONFIG_CS = 2
Global Const HP663X2_INSTR_ERROR_NVRAM_CAL_CS = 3
Global Const HP663X2_INSTR_ERROR_NVRAM_STATE_CS = 4
Global Const HP663X2_INSTR_ERROR_NVRAM_RST_CS = 5
Global Const HP663X2_INSTR_ERROR_RAM_SELFTEST = 10
Global Const HP663X2_INSTR_ERROR_DAC_SELFTEST1 = 11
Global Const HP663X2_INSTR_ERROR_DAC_SELFTEST2 = 12
Global Const HP663X2_INSTR_ERROR_DAC_SELFTEST3 = 13
Global Const HP663X2_INSTR_ERROR_DAC_SELFTEST4 = 14
Global Const HP663X2_INSTR_ERROR_OVDAC_SELFTEST = 15
Global Const HP663X2_INSTR_ERROR_DIGIO_SELFTEST = 80
Global Const HP663X2_INSTR_ERROR_INGUARD_RXBUF_OVR = 213
Global Const HP663X2_INSTR_ERROR_RS232_FRAMING = 216
Global Const HP663X2_INSTR_ERROR_RS232_PARITY = 217
Global Const HP663X2_INSTR_ERROR_RS232_RX_OVR = 218
Global Const HP663X2_INSTR_ERROR_FP_UART_OVR = 220
Global Const HP663X2_INSTR_ERROR_FP_UART_FRAMING = 221
Global Const HP663X2_INSTR_ERROR_FP_UART_PARITY = 222
Global Const HP663X2_INSTR_ERROR_FP_RXBUF_OVR = 223
Global Const HP663X2_INSTR_ERROR_FP_TIMEOUT = 224
Global Const HP663X2_INSTR_ERROR_CAL_SWITCH = 401
Global Const HP663X2_INSTR_ERROR_CAL_PASSWORD = 402
Global Const HP663X2_INSTR_ERROR_CAL_DISABLED = 403
Global Const HP663X2_INSTR_ERROR_CAL_RB_CONST = 404
Global Const HP663X2_INSTR_ERROR_CAL_PROG_CONST = 405
Global Const HP663X2_INSTR_ERROR_CAL_CMD_SEQUENCE = 406
Global Const HP663X2_INSTR_ERROR_CVCC_STATUS = 407
Global Const HP663X2_INSTR_ERROR_ALC_NOT_NORMAL = 408
Global Const HP663X2_INSTR_ERROR_TOO_MANY_SWE_POINTS = 601
Global Const HP663X2_INSTR_ERROR_RS232_CMD_ONLY = 602
Global Const HP663X2_INSTR_ERROR_INCOMPATIBLE_FETCH = 603
Global Const HP663X2_INSTR_ERROR_MEAS_OVERRANGE = 604

Global Const HP663X2_DRV_ERROR_DIGIO_WRONG_MODE = 800

'        /***************************************************/
'        /*  Instrument specific constants                  */
'        /***************************************************/

Global Const HP663X2_VOLTAGE = 0
Global Const HP663X2_CURRENT = 1

Global Const HP663X2_DISP_NORMAL = 0
Global Const HP663X2_DISP_TEXT = 1

Global Const HP663X2_MEAS_DC = 0
Global Const HP663X2_MEAS_ACDC = 1
Global Const HP663X2_MEAS_HIGH = 2
Global Const HP663X2_MEAS_LOW = 3
Global Const HP663X2_MEAS_MAX = 4
Global Const HP663X2_MEAS_MIN = 5

Global Const HP663X2_TRIG_SRC_BUS = 0
Global Const HP663X2_TRIG_SRC_INT = 1

Global Const HP663X2_TRIG_COUNT_MAX = 100
Global Const HP663X2_TRIG_COUNT_MIN = 1

Global Const HP663X2_TRIG_SLOPE_EITHER = 0
Global Const HP663X2_TRIG_SLOPE_POS = 1
Global Const HP663X2_TRIG_SLOPE_NEG = 2

Global Const HP663X2_RELAY_POLARITY_NORMAL = 0
Global Const HP663X2_RELAY_POLARITY_REVERSE = 1
